--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --mode development --watch",
     "lint": "eslint .",
+    "build": "webpack --config webpack.config.js",
     "precommit": "npm run lint"
   },
   "keywords": [],
